--- a/pages/crie/crie.html
+++ b/pages/crie/crie.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="shortcut icon" href="img/Iconlogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="css/crie.css">
+    <link rel="stylesheet" href="crie.css">
     <title>Crie</title>
 </head>
 
@@ -16,7 +16,7 @@
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <a href="index.html" class="brand-logo"><img class="responsive-img" src="img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
+                <a href="index.html" class="brand-logo"><img class="responsive-img" src="../../img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
                 </a>
 
                 <!-- Ícone para abrir no Mobile -->
@@ -25,11 +25,11 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="index.html" class="black-text">Home</a></li>
-                    <li><a href="alunos.html" class="black-text">Alunos</a></li>
-                    <li><a href="crie.html" class="orange-text">Crie</a></li>
-                    <li><a href="controle.html" class="black-text">Controle</a></li>
-                    <li><a href="treino.html" class="black-text">Treino</a></li>
+                    <li><a href="../index/index.html" class="black-text">Home</a></li>
+                    <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
+                    <li><a href="#" class="orange-text">Crie</a></li>
+                    <li><a href="../controle/controle.html" class="black-text">Controle</a></li>
+                    <li><a href="../treino/treino.html" class="black-text">Treino</a></li>
                 </ul>
             </div>
         </nav>
@@ -37,10 +37,10 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="index.html" class="black-text">Home</a></li>
-        <li><a href="alunos.html" class="black-text">Alunos</a></li>
-        <li><a href="crie.html" class="orange-text">Crie</a></li>
-        <li><a href="controle.html" class="black-text">Controle</a></li>
+        <li><a href="../index/index.html" class="black-text">Home</a></li>
+        <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
+        <li><a href="#" class="orange-text">Crie</a></li>
+        <li><a href="../controle/controle.html" class="black-text">Controle</a></li>
         <li><a href="treino.html" class="black-text">Treino</a></li>
     </ul>
 
@@ -82,7 +82,7 @@
         <div>
             <div class="row">
                 <div class="col s12 m3 l3 center-align">
-                    <img class="responsive-img " src="img/avatar.png" alt="avatar do usuario">
+                    <img class="responsive-img " src="../../img/avatar.png" alt="avatar do usuario">
                 </div>
 
                 <div class="col s12 m3 l3 center-align">
@@ -120,33 +120,32 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="white-text text-lighten-3" href="index.html">Home</a></li>
-                        <li><a class="white-text text-lighten-3" href="alunos.html">Alunos</a></li>
-                        <li><a class="white-text text-lighten-3" href="crie.html">Crie</a></li>
-                        <li><a class="white-text text-lighten-3" href="controle.html">Controle</a></li>
-                        <li><a class="white-text text-lighten-3" href="treino.html">Treino</a></li>
+                        <li><a class="white-text text-lighten-3" href="../index/index.html">Home</a></li>
+                        <li><a class="white-text text-lighten-3" href="../alunos/alunos.html">Alunos</a></li>
+                        <li><a class="white-text text-lighten-3" href="">Crie</a></li>
+                        <li><a class="white-text text-lighten-3" href="../controle/controle.html">Controle</a></li>
+                        <li><a class="white-text text-lighten-3" href="../treino/treino.html">Treino</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
-                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="img/up.png" alt="Voltar ao topo"></a>
+                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="../../img/up.png" alt="Voltar ao topo"></a>
                 </div>
             </div>
         </div>
         <div class="footer-copyright">
             <div class="container white-text">
                 © 2020 High Performance Copyright
-                <a class="white-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at
-                    LogoMakr.com</a>
+                <a class="white-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at LogoMakr.com</a>
             </div>
         </div>
     </footer>
 
 
-    <script src="./js/calendario.js"></script>
+    <script src="../../js/calendario.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/topo.js"></script>
+    <script src="../../js/main.js"></script>
+    <script src="../../js/topo.js"></script>
 </body>
 
 </html>
