--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/Iconlogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HIGH PERFORMANCE</title>
     <!-- Compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
@@ -20,7 +20,7 @@
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <a href="index.html" class="brand-logo"><img class="responsive-img" src="img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
+                <a href="index.html" class="brand-logo"><img class="responsive-img" src="../../img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
                 </a>
 
                 <!-- Ícone para abrir no Mobile -->
@@ -29,10 +29,10 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="index.html" class="orange-text">Home</a></li>
-                    <li><a href="sobre.html" class="black-text">Sobre</a></li>
-                    <li><a href="login.html" class="black-text">Entrar</a></li>
-                    <li><a href="cadastro.html" class="black-text">Registrar</a></li>
+                    <li><a href="#" class="orange-text">Home</a></li>
+                    <li><a href="../sobre/sobre.html" class="black-text">Sobre</a></li>
+                    <li><a href="../entrar/login.html" class="black-text">Entrar</a></li>
+                    <li><a href="../cadastro/cadastro.html" class="black-text">Registrar</a></li>
                 </ul>
 
             </div>
@@ -41,22 +41,22 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="index.html" class="orange-text">Home</a></li>
-        <li><a href="sobre.html" class="black-text">Sobre</a></li>
-        <li><a href="login.html" class="black-text">Entrar</a></li>
-        <li><a href="cadastro.html" class="black-text">Registrar</a></li>
+        <li><a href="#" class="orange-text">Home</a></li>
+        <li><a href="../sobre/sobre.html" class="black-text">Sobre</a></li>
+        <li><a href="../entrar/login.html" class="black-text">Entrar</a></li>
+        <li><a href="../cadastro/cadastro.html" class="black-text">Registrar</a></li>
     </ul>
 
     <!-- BANNER -->
     <div class="row" id="banner">
         <div class="col s12 m6 l5">
-            <img class="responsive-img" src="img/imagem.png" alt="" width="1000vh">
+            <img class="responsive-img" src="../../img/imagem.png" alt="" width="1000vh">
         </div>
         <div class="col s12 m6 l7">
             <h1 class="right-align">MONITORE <br> SEUS ALUNOS</h1>
             <p class="right-align">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
             </p>
-            <a href="sobre.html">Saber mais</a>
+            <a href="../sobre/sobre.html">Saber mais</a>
         </div>
     </div>
 
@@ -133,11 +133,11 @@
                 <h6>COMECE <span>AGORA</span> A USAR<br> O <span>HIGH PERFORMANCE</span></h6>
                 <p class="right-align">Cadastre-se<br> e comece a usar!</p>
             </div>
-            <a href="cadastro.html">Se inscrever</a>
+            <a href="../cadastro/cadastro.html">Se inscrever</a>
         </div>
 
         <div class="col s12 m12 l7 left-align">
-            <img src="img/ilustracao.svg" alt="Ilustracao" class="responsive-img">
+            <img src="../../img/ilustracao.svg" alt="Ilustracao" class="responsive-img">
         </div>
     </div>
 
@@ -150,7 +150,7 @@
     <div class="carousel" id="carrossel">
         <a class="carousel-item center-align" href="#one!">
             <section>
-                <img src="img/avatar.png" alt="Depoimento 1">
+                <img src="../../img/avatar.png" alt="Depoimento 1">
                 <h5>JOÃO</h5>
                 <p>Educador Físico</p>
                 <div class="rating">
@@ -176,7 +176,7 @@
         </a>
         <a class="carousel-item center-align" href="#two!">
             <section>
-                <img src="img/avatar.png" alt="Depoimento 1">
+                <img src="../../img/avatar.png" alt="Depoimento 1">
                 <h5>JOÃO</h5>
                 <p>Educador Físico</p>
                 <div class="rating">
@@ -202,7 +202,7 @@
         </a>
         <a class="carousel-item center-align" href="#three!">
             <section>
-                <img src="img/avatar.png" alt="Depoimento 1">
+                <img src="../../img/avatar.png" alt="Depoimento 1">
                 <h5>JOÃO</h5>
                 <p>Educador Físico</p>
                 <div class="rating">
@@ -228,7 +228,7 @@
         </a>
         <a class="carousel-item center-align" href="#four!">
             <section>
-                <img src="img/avatar.png" alt="Depoimento 1">
+                <img src="../../img/avatar.png" alt="Depoimento 1">
                 <h5>JOÃO</h5>
                 <p>Educador Físico</p>
                 <div class="rating">
@@ -254,7 +254,7 @@
         </a>
         <a class="carousel-item center-align" href="#five!">
             <section>
-                <img src="img/avatar.png" alt="Depoimento 1">
+                <img src="../../img/avatar.png" alt="Depoimento 1">
                 <h5>JOÃO</h5>
                 <p>Educador Físico</p>
                 <div class="rating">
@@ -291,14 +291,14 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="white-text text-lighten-3" href="index.html">Home</a></li>
-                        <li><a class="white-text text-lighten-3" href="sobre.html">Sobre</a></li>
-                        <li><a class="white-text text-lighten-3" href="login.html">Entrar</li>
-                        <li><a class="white-text text-lighten-3" href="cadastro.html">Registrar</a></li>
+                        <li><a class="white-text text-lighten-3" href="#">Home</a></li>
+                        <li><a class="white-text text-lighten-3" href="../sobre/sobre.html">Sobre</a></li>
+                        <li><a class="white-text text-lighten-3" href="../entrar/login.html">Entrar</li>
+                        <li><a class="white-text text-lighten-3" href="../cadastro/cadastro.html">Registrar</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
-                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="img/up.png" alt="Voltar ao topo"></a>
+                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="../../img/up.png" alt="Voltar ao topo"></a>
                 </div>
             </div>
         </div>
@@ -315,9 +315,9 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/topo.js"></script>
-    <script src="./js/carrousel.js"></script>
+    <script src="../../js/main.js"></script>
+    <script src="../../js/topo.js"></script>
+    <script src="../../js/carrousel.js"></script>
 
 </body>
 
