--- a/pages/sobre/sobre.html
+++ b/pages/sobre/sobre.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/Iconlogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sobre</title>
     <!-- Compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/sobre.css">
+    <link rel="stylesheet" href="sobre.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
@@ -19,7 +19,7 @@
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <a href="index.html" class="brand-logo"><img class="responsive-img" src="img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
+                <a href="../index/index.html" class="brand-logo"><img class="responsive-img" src="../../img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
                 </a>
 
                 <!-- Ícone para abrir no Mobile -->
@@ -28,10 +28,10 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="index.html" class="black-text">Home</a></li>
-                    <li><a href="sobre.html" class="orange-text">Sobre</a></li>
-                    <li><a href="login.html" class="black-text">Entrar</a></li>
-                    <li><a href="cadastro.html" class="black-text">Registrar</a></li>
+                    <li><a href="../index/index.html" class="black-text">Home</a></li>
+                    <li><a href="#" class="orange-text">Sobre</a></li>
+                    <li><a href="../entrar/login.html" class="black-text">Entrar</a></li>
+                    <li><a href="../cadastro/cadastro.html" class="black-text">Registrar</a></li>
                 </ul>
             </div>
         </nav>
@@ -39,10 +39,10 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="index.html">Início</a></li>
-        <li><a href="sobre.html" class="orange-text">Sobre</a></li>
-        <li><a href="login.html" class="black-text">Entrar</a></li>
-        <li><a href="cadastro.html" class="black-text">Registrar</a></li>
+        <li><a href="../index/index.html">Início</a></li>
+        <li><a href="#" class="orange-text">Sobre</a></li>
+        <li><a href="../entrar/login.html" class="black-text">Entrar</a></li>
+        <li><a href="../cadastro/cadastro.html" class="black-text">Registrar</a></li>
     </ul>
 
 
@@ -54,7 +54,7 @@
                 </p>
             </div>
             <div class="col s12 m6 l6">
-                <img class="responsive-img" src="img/bike.svg" alt="Ilustração">
+                <img class="responsive-img" src="../../img/bike.svg" alt="Ilustração">
             </div>
         </div>
     </div>
@@ -72,10 +72,10 @@
                 <div class="col s12 m6 l6">
                     <div id="profile-card" class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="img/8.png" alt="user bg">
+                            <img class="activator" src="../../img/8.png" alt="user bg">
                         </div>
                         <div class="card-content">
-                            <img src="img/diogo.png" alt="Diogo" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <img src="../../img/diogo.png" alt="Diogo" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
                             <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
                                 <i class="material-icons">add</i>
                             </a>
@@ -113,10 +113,10 @@
                 <div class="col s12 m6 l6">
                     <div id="profile-card" class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="img/8.png" alt="user bg">
+                            <img class="activator" src="../../img/8.png" alt="user bg">
                         </div>
                         <div class="card-content">
-                            <img src="img/paulo.png" alt="Paulo" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <img src="../../img/paulo.png" alt="Paulo" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
                             <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
                                 <i class="material-icons">add</i>
                             </a>
@@ -154,10 +154,10 @@
                 <div class="col s12 m6 l6">
                     <div id="profile-card" class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="img/8.png" alt="user bg">
+                            <img class="activator" src="../../img/8.png" alt="user bg">
                         </div>
                         <div class="card-content">
-                            <img src="img/rafael.jpg" alt="Rafael" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <img src="../../img/rafael.jpg" alt="Rafael" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
                             <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
                                 <i class="material-icons">add</i>
                             </a>
@@ -195,10 +195,10 @@
                 <div class="col s12 m6 l6">
                     <div id="profile-card" class="card">
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="img/8.png" alt="user bg">
+                            <img class="activator" src="../../img/8.png" alt="user bg">
                         </div>
                         <div class="card-content">
-                            <img src="img/roni.png" alt="Roni" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
+                            <img src="../../img/roni.png" alt="Roni" class="circle responsive-img activator card-profile-image cyan lighten-1 padding-2">
                             <a class="btn-floating activator btn-move-up waves-effect waves-light red accent-2 z-depth-4 right">
                                 <i class="material-icons">add</i>
                             </a>
@@ -305,14 +305,14 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="white-text text-lighten-3" href="index.html">Home</a></li>
-                        <li><a class="white-text text-lighten-3" href="sobre.html">Sobre</a></li>
-                        <li><a class="white-text text-lighten-3" href="login.html">Entrar</li>
-                        <li><a class="white-text text-lighten-3" href="cadastro.html">Registrar</a></li>
+                        <li><a class="white-text text-lighten-3" href="../index/index.html">Home</a></li>
+                        <li><a class="white-text text-lighten-3" href="#">Sobre</a></li>
+                        <li><a class="white-text text-lighten-3" href="../entrar/login.html">Entrar</li>
+                        <li><a class="white-text text-lighten-3" href="../cadastro/cadastro.html">Registrar</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
-                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="img/up.png" alt="Voltar ao topo"></a>
+                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="../../img/up.png" alt="Voltar ao topo"></a>
                 </div>
             </div>
         </div>
@@ -324,8 +324,6 @@
             </div>
         </div>
     </footer>
-
-
 
 
     <!-- Compiled and minified JavaScript -->
