--- a/pages/treino/treino.html
+++ b/pages/treino/treino.html
@@ -9,17 +9,16 @@
     <title>Treino</title>
     <!-- Compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="./css/treino.css">
+    <link rel="stylesheet" href="treino.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
 <body>
-
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <a href="index.html" class="brand-logo"><img class="responsive-img" src="img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
+                <a href="../index/index.html" class="brand-logo"><img class="responsive-img" src="../../img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
                 </a>
 
                 <!-- Ícone para abrir no Mobile -->
@@ -28,11 +27,11 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="index.html" class="black-text">Home</a></li>
-                    <li><a href="alunos.html" class="black-text">Alunos</a></li>
-                    <li><a href="crie.html" class="black-text">Crie</a></li>
-                    <li><a href="controle.html" class="black-text">Controle</a></li>
-                    <li><a href="treino.html" class="orange-text">Treino</a></li>
+                    <li><a href="../index/index.html" class="black-text">Home</a></li>
+                    <li><a href="../alunos/alunos.html" class="orange-text">Alunos</a></li>
+                    <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
+                    <li><a href="../controle/controle.html" class="black-text">Controle</a></li>
+                    <li><a href="#" class="black-text">Treino</a></li>
                 </ul>
             </div>
         </nav>
@@ -40,18 +39,20 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="index.html" class="black-text">Home</a></li>
-        <li><a href="alunos.html" class="black-text">Alunos</a></li>
-        <li><a href="crie.html" class="black-text">Crie</a></li>
-        <li><a href="controle.html" class="black-text">Controle</a></li>
-        <li><a href="treino.html" class="orange-text">Treino</a></li>
+        <li><a href="../index/index.html" class="black-text">Home</a></li>
+        <li><a href="../alunos/alunos.html" class="orange-text">Alunos</a></li>
+        <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
+        <li><a href="../controle/controle.html" class="black-text">Controle</a></li>
+        <li><a href="#" class="black-text">Treino</a></li>
     </ul>
 
 
 
     <div class="col s12 m12 l4">
-        <img src="img/atividades.png" alt="atividades" lass="responsive-img">
+        <img src="../../img/atividades.png" alt="atividades" lass="responsive-img">
     </div>
+
+
     <!-- FOOTER -->
     <footer class="page-footer" id="footer">
         <div class="container">
@@ -62,14 +63,15 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="white-text text-lighten-3" href="index.html">Home</a></li>
-                        <li><a class="white-text text-lighten-3" href="sobre.html">Sobre</a></li>
-                        <li><a class="white-text text-lighten-3" href="alunos.html">Entrar</li>
-                        <li><a class="white-text text-lighten-3" href="alunos.html">Registrar</a></li>
+                        <li><a class="white-text text-lighten-3" href="../index/index.html">Home</a></li>
+                        <li><a class="white-text text-lighten-3" href="../alunos/alunos.html">Alunos</a></li>
+                        <li><a class="white-text text-lighten-3" href="../crie/crie.html">Crie</a></li>
+                        <li><a class="white-text text-lighten-3" href="../controle/controle.html">Controle</a></li>
+                        <li><a class="white-text text-lighten-3" href="#">Treino</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
-                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="img/up.png" alt="Voltar ao topo"></a>
+                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="../../img/up.png" alt="Voltar ao topo"></a>
                 </div>
             </div>
         </div>
@@ -82,14 +84,10 @@
     </footer>
 
 
-
-
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/topo.js"></script>
+    <script src="../../js/main.js"></script>
+    <script src="../../js/topo.js"></script>
 </body>
 
 </html>
