--- a/pages/cadastro/cadastro.html
+++ b/pages/cadastro/cadastro.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/Iconlogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cadastro</title>
     <!-- Compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/cadastro.css">
+    <link rel="stylesheet" href="cadastro.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
@@ -18,14 +18,14 @@
     <div class="logout">
         <div class="row">
             <div class="col s12 m6 l5" id="cadastroContainer">
-                <img class="responsive-img logo" src="img/logo.png" alt="High Performance">
+                <img class="responsive-img logo" src="../../img/logo.png" alt="High Performance">
                 <h1>Cadastro</h1>
 
                 <p>Faça seu cadastro, entre na plataforma e monitore seus alunos.</p>
 
                 <div class="cadastro">
                     <div class="input-field">
-                        <a href="login.html">
+                        <a href="../entrar/login.html">
                             <p class=" waves-effect waves-light black-text cad" type="submit" name="action">
                                 <i class="material-icons">arrow_back</i>Já sou cadastrado</p>
                         </a>
@@ -56,7 +56,7 @@
                         <label for="passwordAgain"> Repetir Senha</label>
                     </div>
                     <div class="input-field">
-                        <a href="alunos.html">
+                        <a href="../alunos/alunos.html">
                             <span class="btn waves-effect waves-light">
                                 <i class="material-icons">lock_open</i> Cadastrar
                             </span>
