--- a/pages/controle/controle.html
+++ b/pages/controle/controle.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="img/Iconlogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Controle</title>
     <!-- Compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="./css/controle.css">
+    <link rel="stylesheet" href="controle.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <a href="index.html" class="brand-logo"><img class="responsive-img" src="img/logo.png" alt="High Performance" style="width: 300px;"></a>
+                <a href="../index/index.html" class="brand-logo"><img class="responsive-img" src="../../img/logo.png" alt="High Performance" style="width: 300px;"></a>
                 </a>
 
                 <!-- Ícone para abrir no Mobile -->
@@ -28,11 +28,11 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="index.html" class="black-text">Home</a></li>
-                    <li><a href="alunos.html" class="black-text">Alunos</a></li>
-                    <li><a href="crie.html" class="black-text">Crie</a></li>
-                    <li><a href="controle.html" class="orange-text">Controle</a></li>
-                    <li><a href="treino.html" class="black-text">Treino</a></li>
+                    <li><a href="../index/index.html" class="black-text">Home</a></li>
+                    <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
+                    <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
+                    <li><a href="#" class="orange-text">Controle</a></li>
+                    <li><a href="../treino/treino.html" class="black-text">Treino</a></li>
                 </ul>
             </div>
         </nav>
@@ -40,24 +40,24 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="index.html" class="black-text">Home</a></li>
-        <li><a href="alunos.html" class="black-text">Alunos</a></li>
-        <li><a href="crie.html" class="black-text">Crie</a></li>
-        <li><a href="controle.html" class="orange-text">Controle</a></li>
-        <li><a href="treino.html" class="black-text">Treino</a></li>
+        <li><a href="../index/index.html" class="black-text">Home</a></li>
+        <li><a href="../alunos/alunos.html" class="black-text">Alunos</a></li>
+        <li><a href="../crie/crie.html" class="black-text">Crie</a></li>
+        <li><a href="#" class="orange-text">Controle</a></li>
+        <li><a href="../treino/treino.html" class="black-text">Treino</a></li>
     </ul>
 
 
     <!-- ALUNOS -->
     <div class="container">
-        <a href="alunos.html">
+        <a href="../alunos/alunos.html">
             <div class="quadrado">
                 <div class="row square" id="alunos">
                     <div class="col s12 m12 l6 ">
                         <h2>1<br> Alunos ativos</h2>
                     </div>
                     <div class="col s12 m12 l6 ">
-                        <img class="responsive-img" src="img/user.png" alt="alunos ativos">
+                        <img class="responsive-img" src="../../img/user.png" alt="alunos ativos">
                     </div>
                 </div>
             </div>
@@ -66,14 +66,14 @@
 
     <!-- PAGAMENTOS -->
     <div class="container">
-        <a href="financas.html">
+        <a href="../financas/financas.html">
             <div class="quadrado2">
                 <div class="row square" id="alunos">
                     <div class="col s12 m12 l6 ">
                         <h2>Pagamentos</h2>
                     </div>
                     <div class="col s12 m12 l6 ">
-                        <img class="responsive-img" src="img/money.png" alt="Pagamentos">
+                        <img class="responsive-img" src="../../img/money.png" alt="Pagamentos">
                     </div>
                     <div class="col s12 m12 l12 right-align baixoQuadrado">
                         <p>1 PAGAMENTO PENDENTE</p>
@@ -94,15 +94,15 @@
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="white-text text-lighten-3" href="index.html">Home</a></li>
-                        <li><a class="white-text text-lighten-3" href="alunos.html">Alunos</a></li>
-                        <li><a class="white-text text-lighten-3" href="crie.html">Crie</a></li>
-                        <li><a class="white-text text-lighten-3" href="controle.html">Controle</a></li>
-                        <li><a class="white-text text-lighten-3" href="treino.html">Treino</a></li>
+                        <li><a class="white-text text-lighten-3" href="../index/index.html">Home</a></li>
+                        <li><a class="white-text text-lighten-3" href="../alunos/alunos.html">Alunos</a></li>
+                        <li><a class="white-text text-lighten-3" href="../crie/crie.html">Crie</a></li>
+                        <li><a class="white-text text-lighten-3" href="#">Controle</a></li>
+                        <li><a class="white-text text-lighten-3" href="../treino/treino.html">Treino</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
-                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="img/up.png" alt="Voltar ao topo"></a>
+                    <a href="#top" class="glyphicon glyphicon-chevron-up  tooltipped" data-position="left" data-tooltip="Voltar ao topo!"><img src="../../img/up.png" alt="Voltar ao topo"></a>
                 </div>
             </div>
         </div>
@@ -115,12 +115,10 @@
     </footer>
 
 
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/topo.js"></script>
+    <script src="../../js/main.js"></script>
+    <script src="../../js/topo.js"></script>
 </body>
 
 </html>
