--- a/pages/entrar/login.html
+++ b/pages/entrar/login.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/Iconlogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../img/Iconlogo.png" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login</title>
     <!-- Compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
@@ -17,7 +17,7 @@
     <div class="row">
 
         <div class="col s12 m11 l5" id="login">
-            <img class="responsive-img logo" src="img/logo.png" alt="">
+            <img class="responsive-img logo" src="../../img/logo.png" alt="">
             <h1>Faça seu Login</h1>
 
             <form id="form">
@@ -32,7 +32,7 @@
                     <label for="icon_telephone">Senha</label>
                 </div>
                 <div class="input-field">
-                    <a href="alunos.html">
+                    <a href="../alunos/alunos.html">
                         <span class="btn waves-effect waves-light">
                             <i class="material-icons">lock_open</i> LOGIN
                         </span>
@@ -42,7 +42,7 @@
 
             <div class="cadastro">
                 <div class="input-field">
-                    <a href="cadastro.html">
+                    <a href="../cadastro/cadastro.html">
                         <p class=" waves-effect waves-light black-text cad" type="submit" name="action">
                             <i class="material-icons">arrow_forward</i>Não tenho cadastro</p>
                     </a>
@@ -51,7 +51,7 @@
         </div>
 
         <div class="col s12 m l7">
-            <img class="responsive-img bannerimg" src="img/login.png" alt="Banner Login">
+            <img class="responsive-img bannerimg" src="../../img/login.png" alt="Banner Login">
         </div>
     </div>
 
