--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -12,10 +12,10 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="manifest" href="../../manifest.json">
 </head>
 
 <body>
-
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper #ffffff white">
@@ -295,6 +295,7 @@
                         <li><a class="white-text text-lighten-3" href="../sobre/sobre.html">Sobre</a></li>
                         <li><a class="white-text text-lighten-3" href="../entrar/login.html">Entrar</li>
                         <li><a class="white-text text-lighten-3" href="../cadastro/cadastro.html">Registrar</a></li>
+                        <li><a class="white-text text-lighten-3" href="../cadastro/cadastro.html">Registrar</a></li>
                     </ul>
                 </div>
                 <div class="col l1 s4 right">
@@ -309,6 +310,10 @@
                     LogoMakr.com</a>
             </div>
         </div>
+        <div class="pwa__alert">
+            <button class="pwa__alert__btn">Adicionar a tela principal</button>
+        </div>
+
     </footer>
 
 
